# xagent

./: .env.example  .gitignore  README.md  pyproject.toml
app/: main.py
app/analysis/: style_miner.py
app/assets/: downloader.py
app/cli/: app.py
app/core/: config.py  errors.py  logger.py
app/desktop/: __init__.py  action_planner.py  computer_agent.py  executor.py  observer.py  permissions.py  publisher.py  research_agent.py
app/integrations/: notion_client.py
app/llm/: client.py  prompt_loader.py
app/memory/: sqlite_repo.py
app/observer/: viewer.py
app/research/: api_researcher.py  scorer.py
app/schemas/: action.py  content.py  task.py
app/writing/: drafter.py
configs/: app.yaml  topics.yaml
prompts/analysis/: extract_style.md
prompts/research/: score_content.md  summarize_post.md
prompts/vision/: decide_next_action.md  observe_page.md  verify_result.md
prompts/writing/: write_short_post.md  write_thread.md  write_x_article.md
